# DreamUSD

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
bridge/: CMakeLists.txt
bridge/include/: dreamusd_bridge.h
bridge/src/: error.cpp  error_internal.h  hydra.cpp  hydra_stub.cpp  material.cpp  prim.cpp  stage.cpp  stub.cpp  transform.cpp
crates/dreamusd-app/: Cargo.toml  build.rs
crates/dreamusd-app/src/: main.rs
crates/dreamusd-core/: Cargo.toml
crates/dreamusd-core/src/: error.rs  hydra.rs  lib.rs  prim.rs  stage.rs
crates/dreamusd-render/: Cargo.toml
crates/dreamusd-render/src/: camera.rs  lib.rs  viewport.rs
crates/dreamusd-sys/: Cargo.toml  build.rs
crates/dreamusd-sys/src/: lib.rs
crates/dreamusd-ui/: Cargo.toml
crates/dreamusd-ui/src/: app.rs  lib.rs  theme.rs
crates/dreamusd-ui/src/app/: commands.rs  render.rs  selection.rs
crates/dreamusd-ui/src/panels/: hierarchy.rs  mod.rs  properties.rs
docs/plans/: 2026-03-05-dreamusd-implementation.md  2026-03-05-dreamusd-viewer-design.md
