[package]
name = "dreamusd-ui"
version.workspace = true
edition.workspace = true

[dependencies]
dreamusd-core = { path = "../dreamusd-core" }
dreamusd-render = { path = "../dreamusd-render" }
eframe = { version = "0.31", features = ["wgpu"] }
egui = "0.31"
rfd = "0.15"
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.31"
objc = "0.2"
wgpu-hal = "24.0.4"
